--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -1,4 +1,11 @@
-.titre{
+.titre {
     margin-left: 50%;
 }
-.container {margin-top: 1%;}
+
+.container {
+    margin-top: 1%;
+}
+
+.delete {
+    margin-left: 30%;
+}
